--- a/.github/workflows/e2e-parallel-destroy.yml
+++ b/.github/workflows/e2e-parallel-destroy.yml
@@ -9,7 +9,7 @@ on:
         default: 'true'
 
 env:
-  DEFAULT_DEPLOY_ORDER: 'module.e2e_test.module.aws_vpc,module.e2e_test.module.eks_blueprints,module.e2e_test.module.eks_blueprints_kubernetes_addons'
+  DEFAULT_DEPLOY_ORDER: 'module.e2e_test.module.vpc,module.e2e_test.module.eks_blueprints,module.e2e_test.module.eks_blueprints_kubernetes_addons'
 
 jobs:
   deploy:
@@ -40,8 +40,7 @@ jobs:
             tenant_name: 'private'
             deployment_order:
               [
-                'module.e2e_test.module.aws_vpc',
-                'module.e2e_test.module.vpc_endpoint_gateway',
+                'module.e2e_test.module.vpc',
                 'module.e2e_test.module.vpc_endpoints',
                 'module.e2e_test.module.eks_blueprints',
               ]
@@ -51,11 +50,9 @@ jobs:
             tenant_name: 'nginx'
             deployment_order:
               [
-                'module.e2e_test.module.aws_vpc',
+                'module.e2e_test.module.vpc',
                 'module.e2e_test.module.eks_blueprints',
                 'module.e2e_test.module.eks_blueprints_kubernetes_addons',
-                'module.e2e_test.module.aws_load_balancer_controller',
-                'module.e2e_test.module.ingress_nginx',
               ]
           - example_path: examples/karpenter
             tenant_name: 'karpenter'
