--- a/modules/kubernetes-addons/adot-collector-java/otel-config/templates/opentelemetrycollector.yaml
+++ b/modules/kubernetes-addons/adot-collector-java/otel-config/templates/opentelemetrycollector.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   image: public.ecr.aws/aws-observability/aws-otel-collector:latest
   mode: deployment
-  serviceAccount: adot-collector
+  serviceAccount: adot-collector-java
   config: |
     receivers:
       prometheus:
